--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@ body {
     margin: 0;
     font-family: sans-serif;
     text-align: center;
+   line-height:1.4;
 }
 
 /* ===========================
@@ -192,3 +193,4 @@ button:hover {
         margin: 20px auto; /* Centers list on mobile */
     }
 }
+
