--- a/style.css
+++ b/style.css
@@ -46,7 +46,7 @@ nav a {
     justify-content: center;
     flex-wrap: wrap;
     gap: 20px;
-    padding: 50px;
+    padding: 20px;
 }
 
 
@@ -70,8 +70,13 @@ nav a {
 /* Specific Card Styling (Optional utility) */
 .card {
     background-color: burlywood;
-    width: fit-content;
+    width: 600px;;
     border-radius: 20px;
+    padding: 20px;
+    max-width: 600px;
+    border-radius: 20px;
+    
+    box-sizing: border-box;
 }
 .card h2 {
   margin: 0 0 6px 0;
